# djaphoto

./: .coverage  .gitignore  DESIGN.md  HACKING.md  SYNCRO.md  pyproject.toml  requirement.txt  test-yield.py
.github/workflows/: black.yml  tests.yml
emu_photomaton/: sync_photo.py
photo_server/: manage.py
photo_server/emu_photomaton/: sync_photo.py
photo_server/photo_backend/: admin.py  apps.py  auth0backend.py  forms.py  models.py  oauth2.py  utils.py  views.py
photo_server/photo_backend/api/: forms.py  urls.py  views.py
photo_server/photo_backend/migrations/: 0001_initial.py  0002_auto_20201116_1124.py  0002_photo-sync-api.py  0003_first_connexion-api.py  0003_paillasson.py  0003_photo-OAuth-api.py  0003_photo_photobooth.py  0004_myuser.py  0004_paillasson_client.py  0004_photobooth_sessionkey.py  0004_profile.py  0005_auto_20201116_1526.py  0005_change_for_imagefield.py  0006_auto_20201116_1545.py  0006_photobooth_update.py  0007_auto_20201116_1547.py  0007_photobooth_maintenance.py  0008_auto_20201119_0845.py  0008_auto_20210112_1452.py  0009_auto_20210120_1243.py  0010_auto_20210120_1301.py
photo_server/photo_backend/static/style/: dashboard.css
photo_server/photo_backend/templates/: base.html  dashboard.html  form.html  form_maintenance.html  form_photobooth.html  index.html  login.html  modal_photo.html  nav.html  photo.html  photobooth.html  photobooth_main.html  script.html  sidemenu.html  vitrine.html
photo_server/photo_server/: asgi.py  settings.py  urls.py  wsgi.py
photo_server/tests/: conftest.py  settings.py  test_booth_client.py  test_models.py  test_photo_sync.py  test_utils.py
tf/: cognito.tf  variables.tf
