[tool.poetry]
name = "djaphoto"
version = "0.1.0"
description = "Photomaton application"
authors = ["Ulric Denis <denis.ulric@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.3"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
