[tool.poetry]
name = "djaphoto"
version = "0.1.0"
description = "Photomaton application"
authors = ["Ulric Denis <denis.ulric@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.3"
Jinja2 = "^2.11.2"
pytest-django = "^4.1.0"
requests = "^2.25.0"
social-auth-app-django = "^4.0.0"
python-jose = "~=3.0"
python-dotenv = "~=0.9"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.1.2"
pytest-flake8 = "^1.0.6"
pytest-cov = "^2.10.1"
isort = "^5.6.4"
black = "^20.8b1"
pytest-black = "^0.3.12"
pytest-isort = "^1.2.0"

[tool.pytest.ini_options]
addopts = "--cov photo_server --cov-report html --tb short --ignore=photo_server/photo_backend/migrations"
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = [
    "photo_server/manage.py",
    "photo_server/photo_backend",
    "photo_server/photo_server",
    "photo_server/tests",
    "photo_server/emu_photomaton",
]

[tool.isort]
profile = "black"
src_paths = [
    "photo_server",
]

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
